Point to location of ONEWS, OONEWS, don't install them.
git-svn-id: https://svn.r-project.org/R/trunk@50652 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -11295,6 +11295,7 @@ BUG FIXES
 
 	*********************************************************
 	*							*
+	*	Older news is available in the sources:         *
 	*	News of 1.x.y and 2.0.0 is in file `ONEWS'	*
 	*	News of 1.0.0 and earlier is in file `OONEWS'	*
 	*							*
