wilcox.test(*, conf.int=TRUE)$estimate no longer depends on alternative
git-svn-id: https://svn.r-project.org/R/trunk@50654 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -375,6 +375,10 @@ BUG FIXES
 
     o	Conversion to latex of an Rd file with no aliases failed.
 
+    o	wilcox.test(*, conf.int=TRUE) has achieved.level corrected and, for
+	exact=FALSE, now gives an 'estimate' which does not depend on the
+	alternative used.
+
 
 
 		CHANGES IN R VERSION 2.10.0
