fix for PR#14103
git-svn-id: https://svn.r-project.org/R/trunk@50663 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -192,6 +192,9 @@ BUG FIXES
 	(and anything previously named Resources.old removed) as part
 	of the framework installation process.
 
+    o	Using read.table(header=TRUE) on a header with an embedded new
+    	line would copy part of the header into the data.  (PR#14103)
+
 
 
 	**************************************************
