Using multiple arguments in return() is now defunct.
git-svn-id: https://svn.r-project.org/R/trunk@50667 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -171,6 +171,8 @@ DEPRECATED & DEFUNCT
     o	index.search() (which was deprecated in 2.10.0) is no longer
 	exported and has a different argument list.
 
+    o	Use of multiple arguments to return() is now defunct.
+
 
 BUG FIXES
 
