Fix for PR#14113:  help.search("foo", package="bar") failed.
git-svn-id: https://svn.r-project.org/R/trunk@50673 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -383,6 +383,9 @@ BUG FIXES
     o	wilcox.test(*, conf.int=TRUE) has achieved.level corrected and, for
 	exact=FALSE, now gives an 'estimate' which does not depend on the
 	alternative used.
+	
+    o	help.search() failed when the package argument was specified.
+    	(PR#14113)
 
 
 
