tweaks to user-supplied methods in glm()
git-svn-id: https://svn.r-project.org/R/trunk@50688 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -162,6 +162,10 @@ NEW FEATURES
 	packages which included 'name' in the signature of their
 	methods need to be updated and re-installed.
 
+    o	The handling of the 'method' argument of glm() has been
+	refined following suggestions by Ioannis Kosmidis and Heather
+	Turner.
+
 
 DEPRECATED & DEFUNCT
 
