--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -3658,8 +3658,11 @@ For example
 @noindent
 For consistency with the pre-assigned sections, the section name (the
 first argument to @code{\section}) should be capitalized (but not all
-upper case).  Whitespace between the first and second braced
-expressions is not allowed as from @R{} 2.10.0.
+upper case).  Whitespace between the first and second braced expressions
+is not allowed as from @R{} 2.10.0.  Markup (e.g.@: @code{\code}) within
+the section title may cause problems with the latex conversion
+(depending on the version of macro packages such as @samp{hyperref}) and
+so should be avoided.
 
 Note that additional named sections are always inserted at a fixed
 position in the output (before @code{\note}, @code{\seealso} and the
