adjust line textures for butt end caps on postscript() and pdf() devices
git-svn-id: https://svn.r-project.org/R/trunk@50695 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -166,6 +166,10 @@ NEW FEATURES
 	refined following suggestions by Ioannis Kosmidis and Heather
 	Turner.
 
+    o	The handling of line textures in the postscript() and pdf()
+	devices was set up for round end caps (the only type which
+	existed at the time): it has now been adjusted for butt endcaps.
+
 
 DEPRECATED & DEFUNCT
 
