str(*, list.len)
git-svn-id: https://svn.r-project.org/R/trunk@50707 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -170,6 +170,10 @@ NEW FEATURES
 	devices was set up for round end caps (the only type which
 	existed at the time): it has now been adjusted for butt endcaps.
 
+    o	str() gains a new argument 'list.len' with default 99, limiting the
+	number of list() items (per level), thanks to suggestions from
+	David Winsenius.
+
 
 DEPRECATED & DEFUNCT
 
