--- a/NEWS
+++ b/NEWS
@@ -223,6 +223,10 @@ BUG FIXES
         formal arguments (in addition to ...).  Arguments omitted from
         the method definition but conforming (per the documentation)
         should now be ignored (treated as "ANY") in dispatching.
+        
+    o	In some locales functions related to string comparison (e.g.
+	unique(), match(), etc.) could cause crashes (PR#14114 and
+	PR#14125).
 
 
 
