--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@
 	**************************************************
 
 
-		CHANGES IN R VERSION 2.10.0 patched
+		CHANGES IN R VERSION 2.10.1
 
 
 NEW FEATURES
