--- a/NEWS
+++ b/NEWS
@@ -237,7 +237,7 @@ BUG FIXES
 	**************************************************
 
 
-		CHANGES IN R VERSION 2.10.0 patched
+		CHANGES IN R VERSION 2.10.1
 
 
 NEW FEATURES
