--- a/NEWS
+++ b/NEWS
@@ -11127,6 +11127,7 @@ BUG FIXES
 
 	*********************************************************
 	*							*
+	*	Older news is available in the sources:         *
 	*	News of 1.x.y and 2.0.0 is in file `ONEWS'	*
 	*	News of 1.0.0 and earlier is in file `OONEWS'	*
 	*							*
