make S4 methods arguments in the wrong order an error
git-svn-id: https://svn.r-project.org/R/trunk@50732 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -170,6 +170,10 @@ NEW FEATURES
 	number of list() items (per level), thanks to suggestions from
 	David Winsenius.
 
+    o	Having formal arguments of an S4 method in a different order
+	from the generic is now an error (the warning having been
+	ignored by some package maintainers for a long time).
+
 
 DEPRECATED & DEFUNCT
 
