factors with NA levels
git-svn-id: https://svn.r-project.org/R/trunk@50735 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -252,6 +252,8 @@ BUG FIXES
 
     o	qpois(p = 1, lambda = 0) now gives 0 as for all other p.  (PR#14135)
 
+    o	x[ , drop=TRUE] dropped an NA level, even if it was in use.
+
 
 
 		CHANGES IN R VERSION 2.10.1
