--- a/NEWS
+++ b/NEWS
@@ -222,12 +222,12 @@ BUG FIXES
         the method definition but conforming (per the documentation)
         should now be ignored (treated as "ANY") in dispatching.
 
-    o	In some locales functions related to string comparison (e.g.
-	unique(), match(), etc.) could cause crashes (PR#14114 and
-	PR#14125).
+    o	Functions related to string comparison (e.g. unique(), match())
+	could cause crashes when used with strings not in the native
+	encoding, e.g. UTF-8 strings on Windows.
+	(PR#14114 and PR#14125)
 
     o	x[ , drop=TRUE] dropped an NA level, even if it was in use.
-	(Several packages relied on this.)
 
 
 
