port r50715,16,43 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50744 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -23,6 +23,11 @@ BUG FIXES
 
     o	qpois(p = 1, lambda = 0) now gives 0 as for all other p.  (PR#14135)
 
+    o	Functions related to string comparison (e.g. unique(), match())
+	could cause crashes when used with strings not in the native
+	encoding, e.g. UTF-8 strings on Windows.
+	(PR#14114 and PR#14125)
+
 
 
 		CHANGES IN R VERSION 2.10.1
