port r50735/41 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50749 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -28,6 +28,8 @@ BUG FIXES
 	encoding, e.g. UTF-8 strings on Windows.
 	(PR#14114 and PR#14125)
 
+    o	x[ , drop=TRUE] dropped an NA level even if it was in use.
+
 
 
 		CHANGES IN R VERSION 2.10.1
