fix bug in S4 methods for ...
git-svn-id: https://svn.r-project.org/R/trunk@50752 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -222,8 +222,10 @@ BUG FIXES
         the method definition but conforming (per the documentation)
         should now be ignored (treated as "ANY") in dispatching.
 
-
-
+    o	The computations for S4 method evaluation when "..." was in
+        the signature could fail, treating `...` as an ordinary
+        symbol.  This has been fixed, for the known cases.
+	
 
 	**************************************************
 	*						 *
