Fix MIME type for R.css in dynamic help.
git-svn-id: https://svn.r-project.org/R/trunk@50755 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -257,6 +257,9 @@ BUG FIXES
 	(PR#14114 and PR#14125)
 
     o	x[ , drop=TRUE] dropped an NA level even if it was in use.
+    
+    o	The dynamic HTML help system reported the wrong MIME type for the
+    	style sheet.
 
 
 
