--- a/NEWS
+++ b/NEWS
@@ -30,6 +30,9 @@ BUG FIXES
 
     o	x[ , drop=TRUE] dropped an NA level even if it was in use.
 
+    o	The dynamic HTML help system reported the wrong MIME type for the
+    	style sheet.
+
 
 
 		CHANGES IN R VERSION 2.10.1
