port r50757 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50758 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -33,6 +33,9 @@ BUG FIXES
     o	The dynamic HTML help system reported the wrong MIME type for the
     	style sheet.
 
+    o	tools::codoc() (used by R CMD check) was missing cases where the
+ 	function had no arguments but was documented to have some.
+
 
 
 		CHANGES IN R VERSION 2.10.1
