warning -> error for embedded nuls and unrecognized escapes
git-svn-id: https://svn.r-project.org/R/trunk@50768 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -178,6 +178,10 @@ NEW FEATURES
 	vectors with possibly marked encodings to the current locale and
 	UTF-8 respectively.
 
+    o	Unrecognized escapes and embedded nuls in character strings are
+	now an error, not just a warning.  Thus option "warnEscapes"
+	is no longer needed.
+
 
 DEPRECATED & DEFUNCT
 
