--- a/NEWS
+++ b/NEWS
@@ -35,6 +35,9 @@ BUG FIXES
 
     o	tools::codoc() (used by R CMD check) was missing cases where the
  	function had no arguments but was documented to have some.
+ 	
+    o	Help links containing special characters (e.g. "?") were not 
+    	generated correctly when rendered in HTML. (PR#14155)
 
 
 
