--- a/NEWS
+++ b/NEWS
@@ -90,7 +90,7 @@ NEW FEATURES
 	more room for error.
 
     o	The index page for HTML help for a package now collapses
-    	multiple signatures for S4 methods into a single entry.
+	multiple signatures for S4 methods into a single entry.
 
     o	The use of '.required' by require() and detach() has been
 	replaced by '.Depends' which is set from the 'Depends' field
@@ -136,16 +136,16 @@ NEW FEATURES
 	maintainer.  (Suggested by Barry Rowlingson.)
 
     o	quantile() now has a method for the date-time class "POSIXt",
- 	and types 1 and 3 (which never interpolate) work for Dates and
- 	ordered factors.
+	and types 1 and 3 (which never interpolate) work for Dates and
+	ordered factors.
 
     o	length(<POSIXlt>)  now returns the length of the corresponding
 	abstract timedate-vector rather than always 9 (the length of the
 	underlying list structure).  (Wish of PR#14073 and PR#10507.)
 
-    o   The readline completion backend no longer sorts possible
-    	completions alphabetically (e.g., function argument names) if
-    	R is compiled with readline >= 6.
+    o	The readline completion backend no longer sorts possible
+	completions alphabetically (e.g., function argument names) if
+	R is compiled with readline >= 6.
 
     o	select.list() gains a 'graphics' argument to allow Windows/Mac
 	users to choose the text interface.  This changes the
@@ -225,17 +225,17 @@ BUG FIXES
 	the framework installation process.
 
     o	The checks for conforming S4 method arguments could fail when
-        the signature of the generic function omitted some of the
-        formal arguments (in addition to ...).  Arguments omitted from
-        the method definition but conforming (per the documentation)
-        should now be ignored (treated as "ANY") in dispatching.
+	the signature of the generic function omitted some of the
+	formal arguments (in addition to ...).	Arguments omitted from
+	the method definition but conforming (per the documentation)
+	should now be ignored (treated as "ANY") in dispatching.
 
     o	The computations for S4 method evaluation when '...' was in the
 	signature could fail, treating '...' as an ordinary symbol.
 	This has been fixed, for the known cases.
 
 
-	
+
 
 	**************************************************
 	*						 *
@@ -253,11 +253,14 @@ NEW FEATURES
 	devices was set up for round end caps (the only type which
 	existed at the time): it has now been adjusted for butt endcaps.
 
+    o	lchoose(a,k) is now defined as	log(abs(choose(a,k))), analogously
+	to lfactorial().
+
 
 BUG FIXES
 
     o	Using read.table(header=TRUE) on a header with an embedded new
-    	line would copy part of the header into the data.  (PR#14103)
+	line would copy part of the header into the data.  (PR#14103)
 
     o	qpois(p = 1, lambda = 0) now gives 0 as for all other p.  (PR#14135)
 
@@ -267,15 +270,17 @@ BUG FIXES
 	(PR#14114 and PR#14125)
 
     o	x[ , drop=TRUE] dropped an NA level even if it was in use.
-    
+
     o	The dynamic HTML help system reported the wrong MIME type for the
-    	style sheet.
+	style sheet.
 
     o	tools::codoc() (used by R CMD check) was missing cases where the
- 	function had no arguments but was documented to have some.
- 	
-    o	Help links containing special characters (e.g. "?") were not 
-    	generated correctly when rendered in HTML. (PR#14155)
+	function had no arguments but was documented to have some.
+
+    o	Help links containing special characters (e.g. "?") were not
+	generated correctly when rendered in HTML. (PR#14155)
+
+    o	lchoose(a,k) no longer wrongly gives NaN for negative a.
 
 
 
