fixed rounding error in ks.test
git-svn-id: https://svn.r-project.org/R/trunk@50777 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -235,6 +235,10 @@ BUG FIXES
 	This has been fixed, for the known cases.
 
 
+    o   ks.test() could give a p-value that was off by one observation
+        due to rounding error in the C code. 
+        (reported by allwright@maths.ox.ac.uk)
+
 
 
 	**************************************************
