More compact messages about masked objects when loading/attaching
git-svn-id: https://svn.r-project.org/R/trunk@50788 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -182,6 +182,10 @@ NEW FEATURES
 	now an error, not just a warning.  Thus option "warnEscapes"
 	is no longer needed.
 
+    o   Informational messages about masked objects displaying when a
+        package is attached are now more compact, using strwrap
+        instead of one object per line.
+
 
 DEPRECATED & DEFUNCT
 
