add "curl" method for download.file()
git-svn-id: https://svn.r-project.org/R/trunk@50794 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -189,6 +189,10 @@ NEW FEATURES
 
     o	print.rle() gains argument 'prefix'.
 
+    o	download.file() gains a "curl" method, mainly for use on
+	platforms which have curl but not wget, but also for some
+	hard-to-access URLs.
+
 
 DEPRECATED & DEFUNCT
 
