port r50777 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50795 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -38,11 +38,14 @@ BUG FIXES
 
     o	tools::codoc() (used by R CMD check) was missing cases where the
 	function had no arguments but was documented to have some.
- 	
-    o	Help links containing special characters (e.g. "?") were not 
-    	generated correctly when rendered in HTML. (PR#14155)
+
+    o	Help links containing special characters (e.g. "?") were not
+	generated correctly when rendered in HTML. (PR#14155)
 
     o	lchoose(a,k) no longer wrongly gives NaN for negative a.
+
+    o	ks.test() could give a p-value that was off by one observation
+	due to rounding error.  (PR#14145)
 
 
 
