ported r50777 to R-patched
git-svn-id: https://svn.r-project.org/R/trunk@50796 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -245,9 +245,6 @@ BUG FIXES
 	signature could fail, treating '...' as an ordinary symbol.
 	This has been fixed, for the known cases.
 
-    o	ks.test() could give a p-value that was off by one observation
-	due to rounding error in the C code.
-	(reported by allwright@maths.ox.ac.uk)
 
 
 
@@ -295,6 +292,9 @@ BUG FIXES
 	generated correctly when rendered in HTML. (PR#14155)
 
     o	lchoose(a,k) no longer wrongly gives NaN for negative a.
+
+    o	ks.test() could give a p-value that was off by one observation
+	due to rounding error.  (PR#14145)
 
 
 
