more protection for singular ar fits
git-svn-id: https://svn.r-project.org/R/trunk@50798 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -245,6 +245,9 @@ BUG FIXES
 	signature could fail, treating '...' as an ordinary symbol.
 	This has been fixed, for the known cases.
 
+    o	Various ar() fitting methods have more protection for singular
+ 	fits.
+
 
 
 
