allow some maths HTML rendering in \eqn, and begin to make use of it
git-svn-id: https://svn.r-project.org/R/trunk@50805 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -193,6 +193,9 @@ NEW FEATURES
 	platforms which have curl but not wget, but also for some
 	hard-to-access URLs.
 
+   o	\eqn and \deqn will render in HTML (and convert to text)
+	upper- and lower-case Greek letters, \ldots, \dots, \ge and \le.
+
 
 DEPRECATED & DEFUNCT
 
