--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -3921,7 +3921,7 @@ The following example is from @file{Poisson.Rd}:
 @example
 @group
   \deqn@{p(x) = \frac@{\lambda^x e^@{-\lambda@}@}@{x!@}@}@{%
-        p(x) = lambda^x exp(-lambda)/x!@}
+        p(x) = \lambda^x exp(-\lambda)/x!@}
   for \eqn@{x = 0, 1, 2, \ldots@}.
 @end group
 @end example
@@ -3939,7 +3939,7 @@ for $x = 0, 1, 2, \ldots$.
 @end quotation
 @end iftex
 
-For @HTML{} and text on-line help we get
+For text on-line help we get
 
 @quotation
 @cartouche
@@ -3950,6 +3950,10 @@ for x = 0, 1, 2, ....
 @end example
 @end cartouche
 @end quotation
+
+As from \R 2.11.0 Greek letters (both cases) will be rendered in HTML if
+preceded by a backslash, @code{\dots} and @code{\ldots} will be
+rendered as ellipses and @code{\ge} and @code{\le} as mathematical symbols.
 
 See @ref{Back-compatibility issues} for earlier problems with @code{\eqn}
 with one argument immediately followed by a right brace.
