port r50821 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50822 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -18,6 +18,11 @@ NEW FEATURES
     o	lchoose(a,k) is now defined as	log(abs(choose(a,k))), analogously
 	to lfactorial().
 
+    o	Although \eqn{} in Rd files is defined as a 'verbatim' macro,
+	many packages expected \dots and \ldots to be interpreted
+	there (as was the case in R < 2.10.0), so this is now done
+	(using an ellipsis in HTML rendering).
+
 
 BUG FIXES
 
