--- a/doc/manual/R-exts.texi
+++ b/doc/manual/R-exts.texi
@@ -335,10 +335,10 @@ Otherwise, it may not even be legally correct for others to distribute
 copies of the package.  Do not use the @samp{License} field for
 copyright information: if needed, use a @samp{Copyright} field.
 
-Please ensure that the license you choose also covers any system
-dependencies of your package: it is particularly important that any
-restrictions on the use of such dependencies are evident to people
-reading your @file{DESCRIPTION} file.
+Please ensure that the license you choose also covers any dependencies
+(including system depenencies) of your package: it is particularly
+important that any restrictions on the use of such dependencies are
+evident to people reading your @file{DESCRIPTION} file.
 
 The @samp{Description} field should give a comprehensive description of
 what the package does.  One can use several (complete) sentences, but
