port r50843,4 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50845 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -23,6 +23,13 @@ NEW FEATURES
 	there (as was the case in R < 2.10.0), so this is now done
 	(using an ellipsis in HTML rendering).
 
+    o	Escaping of braces in quoted strings in R-code sections of Rd
+	files is allowed again.  This had been changed for the new Rd
+	format in R 2.10.0 but was only documented on the developer
+	site and was handled inconsistently by the converters: text
+	and example conversion removed the escapes but HTML conversion
+	did not.
+
 
 BUG FIXES
 
