--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -4171,9 +4171,9 @@ For installing simple packages containing data or @R{} source
 but no compiled code, none of these are needed.
 Perl is essential to build @R{}, and needed to develop packages.
 
-A complete build of @R{} including compiled @HTML{} help files and
-PDF manuals, and producing the standalone installer 
-@file{@value{RWVERSION}-win32.exe} will also need the following:
+A complete build of @R{} including PDF manuals, and producing the
+standalone installer @file{@value{RWVERSION}-win32.exe} will also need
+the following:
 @itemize
 @item
 @LaTeX{}
