Toolbar was keeping focus in some cases.
git-svn-id: https://svn.r-project.org/R/trunk@50851 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -1,4 +1,4 @@
-﻿
+
 	**************************************************
 	*	 Windows-specific changes to R		 *
 	*	 See the file NEWS for changes that	 *
@@ -58,6 +58,10 @@ BUG FIXES
     o	The HTML package index was not constructed properly when the
 	library path was specified with backslashes.  (Patch submitted
 	by Gabor Grothendieck.)
+	
+    o	Some of the MDI toolbar buttons (e.g. "Open Script") did not
+	return the focus to the console if the user cancelled the
+	action.
     	
 
 
