Port r50853 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50854 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/CHANGES
+++ b/src/gnuwin32/CHANGES
@@ -13,7 +13,18 @@
 	**************************************************
 
 
-		CHANGES IN R VERSION 2.10.0 patched
+		CHANGES IN R VERSION 2.10.1 patched
+
+
+BUG FIXES
+
+    o	Some of the MDI toolbar buttons (e.g. "Open Script") did not
+	return the focus to the console if the user cancelled the
+	action.
+
+
+
+		CHANGES IN R VERSION 2.10.1
 
 
 BUG FIXES
@@ -28,10 +39,6 @@ BUG FIXES
 	library path was specified with backslashes.  (Patch submitted
 	by Gabor Grothendieck.)
 	
-    o	Some of the MDI toolbar buttons (e.g. "Open Script") did not
-	return the focus to the console if the user cancelled the
-	action.
-    	
 
 
     		CHANGES IN R VERSION 2.10.0
