--- a/NEWS
+++ b/NEWS
@@ -331,6 +331,9 @@ BUG FIXES
     o	ks.test() could give a p-value that was off by one observation
 	due to rounding error.  (PR#14145)
 
+    o	readBin() when reading millions of character strings in a single
+	call used excessive amounts of memory (which also slowed it down).
+
 
 
 		CHANGES IN R VERSION 2.10.1
