port r50875 from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@50876 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -59,8 +59,9 @@ BUG FIXES
     o	ks.test() could give a p-value that was off by one observation
 	due to rounding error.  (PR#14145)
 
-    o	readBin() when reading millions of character strings in a single
-	call used excessive amounts of memory (which also slowed it down).
+    o	readBin()/readChar() when reading millions of character strings
+	in a single call used excessive amounts of memory (which also
+	slowed them down).
 
 
 
