tweaks to seq.int
git-svn-id: https://svn.r-project.org/R/trunk@50879 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -213,6 +213,9 @@ NEW FEATURES
 	The format() methods for classes "octmode" and "hexmode" gain
 	a 'width' argument.
 
+    o	seq.int() returns an integer result in some further cases
+	where seq() does, e.g. seq.int(1L, 9L, by = 2L).
+
 
 DEPRECATED & DEFUNCT
 
