Added \subsection macro.  Formatting needs some work...
git-svn-id: https://svn.r-project.org/R/trunk@50881 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -215,6 +215,9 @@ NEW FEATURES
 
     o	seq.int() returns an integer result in some further cases
 	where seq() does, e.g. seq.int(1L, 9L, by = 2L).
+	
+    o	Added \subsection{}{} macro to Rd syntax, for subsections
+    	within sections.
 
 
 DEPRECATED & DEFUNCT
